<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="header_control">Control</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbon Options</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="performance">Performance</string>
    <string name="installer">Installer</string>
    <string name="title_about">About AOKP</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbon options</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="menu_nav_bar_reset">Reset NavBar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available the left and right swipe ribbons.</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_off">Power Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">NavBar and Statusbar toggles</string>
    <string name="power_menu_expanded_desktop">Show Expanded desktop toggle</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="title_show_reboot_keyguard">Reboot on lockscreen</string>
    <string name="summary_show_reboot_keyguard">Enabling this will show reboot options while on lockscreen</string>
    <string name="power_menu_profiles_title">Profile switcher</string>
    <string name="power_menu_profiles_disabled">Disabled</string>
    <string name="power_menu_profiles_lock">Disabled on lockscreen</string>
    <string name="power_menu_profiles_all">Always show</string>
    <string name="expanded_desktop_status_bar_state">Expanded desktop statusbar state</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="bootani_cat">Boot animation</string>
    <string name="notification_cat">Notification</string>
    <string name="tabletUI_cat">Tablet UI</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from storage to use as your new boot animation</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="rotate_180_title">Allow 180-degree rotation</string>
    <string name="rotate_180_summary">Checking this allows your device to rotate upside down!</string>
    <string name="ram_bar">Recents RAM Bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the recents menu</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some SystemBar items e.g. the Compatibility Mode button</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="multipane_ui_summary">Checking this will enable the Dual Panel (Tablet) UI used by certain apps
    </string>
    <string name="show_overflow_title">Show Menu UI overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="notification_show_wifi_ssid_title">Show WiFi network name</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_per_row_summary">Choose how many toggles to show per row</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order in which your toggles are displayed</string>
    <string name="toggle_favcontact_title">Favorite contact</string>
    <string name="toggle_favcontact_summary">Choose your favorite contact</string>
    <string name="toggle_enable_fasttoggle_title">Enable fast toggle</string>
    <string name="toggle_enable_fasttoggle_summary">edge of the status bar pulls down Quick Settings</string>
    <string name="navigation_bar_tint_title">Navigation Bar buttons color</string>
    <string name="lockscreen_security_cat">Security</string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">Choose the style of the NavBar and Statusbar</string>
    <string name="status_bar_max_notifications_title">Number of notification icons</string>
    <string name="status_bar_max_notifications_summary">Applies only to tablet-UI portrait view</string>
    <string name="lock_clock_title">Lock clock widget</string>
    <string name="ls_shortcuts_title">Lockscreen Shortcuts</string>
    <string name="pie_restart_launcher_title">Restart Launcher</string>
    <string name="pie_restart_launcher_summary">Allows your launcher to regain sanity after a screensize change (recommended)</string>
    <string name="pie_color_style_title">Pie color style</string>
    <string name="pie_background_title">Background color</string>
    <string name="pie_select_title">Selection color</string>
    <string name="pie_outlines_title">Outlines color</string>
    <string name="pie_status_clock_title">Clock color</string>
    <string name="pie_status_title">Status color</string>
    <string name="pie_chevron_left_title">Left chevron color</string>
    <string name="pie_chevron_right_title">Right chevron color</string>
    <string name="pie_juice_title">Battery juice color</string>
    <string name="hybrid_settings_title">Hybrid settings</string>
    <string name="dpi_groups_title">DPI Groups</string>
    <string name="dpi_groups_summary">Define wich apps should be in each DPI group</string>
    <string name="dpi_groups_backuprestore_title">Backup and restore</string>
    <string name="dpi_groups_auto_backup">Auto backup</string>
    <string name="dpi_groups_auto_backup_summary">Perform an auto backup everytime you change the configuration</string>
    <string name="dpi_groups_backup_title">Backup</string>
    <string name="dpi_groups_backup_summary">Backup your groups configuration</string>
    <string name="dpi_groups_restore_title">Restore</string>
    <string name="dpi_groups_restore_summary">Restore your groups configuration</string>
    <string name="appsuimode_title">Apps UIMode</string>
    <string name="apps_dpi_title">Apps density</string>
    <string name="apps_dpi_summary">Current apps density:</string>
    <string name="per_app_layout_title">Per app layout</string>
    <string name="per_app_layout_summary">Define layout for each app</string>
    <string name="widgets_title">Widgets</string>
    <string name="widgets_summary">Define the list of widgets</string>
    <string name="notification_drawer_title">Notification Power Widget</string>
    <string name="notification_shortcuts_settings_title">Notification shortcuts</string>
    <string name="notification_shortcuts_settings_summary">Show shortcuts in the notification drawer</string>
    <string name="recent_kill_all_summary">Enable kill-all button in Recent Apps window and select position</string>
    <string name="color_one">Color one</string>
    <string name="color_two">Color two</string>
    <string name="color_three">Color three</string>
    <string name="color_four">Color four</string>
    <string name="color_five">Color five</string>
    <string name="color_six">Color six</string>
</resources>