<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/hybrid_settings_title"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
		android:key="GeneralUI"
        android:title="@string/title_ui">

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

    	<Preference
            android:key="lcd_density_setup"
            android:title="@string/lcd_density_title"
            android:summary="@string/lcd_density_summary" />

        <Preference
            android:key="apps_dpi"
            android:title="@string/apps_dpi_title"
            android:summary="@string/apps_dpi_summary" />

        <ListPreference
            android:key="apps_ui_mode"
            android:entries="@array/uimode_entries"
            android:entryValues="@array/uimode_values"
            android:title="@string/appsuimode_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/hybrid_settings_title">

        <PreferenceScreen
            android:key="per_app_layout"
            android:fragment="com.aokp.romcontrol.fragments.PerAppLayout"
            android:title="@string/per_app_layout_title"
            android:summary="@string/per_app_layout_summary" />

        <PreferenceScreen
            android:key="dpi_groups"
            android:fragment="com.aokp.romcontrol.fragments.DpiGroups"
            android:title="@string/dpi_groups_title"
            android:summary="@string/dpi_groups_summary" />

        <PreferenceScreen
            android:key="widgets"
            android:fragment="com.aokp.romcontrol.fragments.Widgets"
            android:title="@string/widgets_title"
            android:summary="@string/widgets_summary" />

    </PreferenceCategory>

     <PreferenceCategory
            android:key="misc"
            android:title="@string/misc_short">

       <CheckBoxPreference
            android:key="hide_extras"
            android:title= "@string/hide_extras"
            android:summary= "@string/hide_extras_summary"
            android:defaultValue="false" />

    	<CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />
    
    	<CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dpi_groups_backuprestore_title">

	    <CheckBoxPreference
            android:key="dpi_groups_auto_backup"
            android:title="@string/dpi_groups_auto_backup"
            android:summary="@string/dpi_groups_auto_backup_summary"
            android:defaultValue="false" />

        <Preference
            android:key="dpi_groups_backup"
            android:title="@string/dpi_groups_backup_title"
            android:summary="@string/dpi_groups_backup_summary" />

        <Preference
            android:key="dpi_groups_restore"
            android:title="@string/dpi_groups_restore_title"
            android:summary="@string/dpi_groups_restore_summary" />
    </PreferenceCategory>

</PreferenceScreen>
