<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/header_statusbar">

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="status_bar_max_notifications"
            android:dialogTitle="@string/status_bar_max_notifications_title"
            android:title="@string/status_bar_max_notifications_title"
            android:summary="@string/status_bar_max_notifications_summary"
            android:entries="@array/entries_status_bar_max_notifications"
            android:entryValues="@array/values_status_bar_max_notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <ListPreference
	        android:key="notification_wallpaper"
	        android:persistent="false"
	        android:dialogTitle="@string/notification_wallpaper_title"
	        android:title="@string/notification_wallpaper_title"
	        android:entries="@array/notification_background_entries"
	        android:entryValues="@array/notification_background_values" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="recent_kill_all"
            android:title="@string/recent_kill_all"
            android:summary="@string/recent_kill_all_summary" />

        <CheckBoxPreference
            android:key="ram_usage_bar"
            android:title="@string/ram_bar"
            android:summary="@string/ram_bar_summary" />

    </PreferenceCategory>

    <PreferenceCategory
		android:key="tabletUI"
        android:title="@string/tabletUI_cat">

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

       <CheckBoxPreference
            android:key="hide_extras"
            android:title= "@string/hide_extras"
            android:summary= "@string/hide_extras_summary"
            android:defaultValue="false" />

	<CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />

	<CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

	<Preference
            android:key="lcd_density_setup"
            android:title="@string/lcd_density_title"
            android:summary="@string/lcd_density_summary" />

    </PreferenceCategory>

     <PreferenceCategory
            android:key="misc"
            android:title="@string/misc_short">

    <!--    <CheckBoxPreference
            android:key="kill_app_longpress_back"
            android:title="@string/kill_app_longpress_back"
            android:summary="@string/kill_app_longpress_back_summary" /> -->

         <CheckBoxPreference
            android:key="rotate_180"
            android:title="@string/rotate_180_title"
            android:summary="@string/rotate_180_summary" />

        <CheckBoxPreference
            android:key="ime_switcher"
            android:title="@string/ime_switcher_title"
            android:summary="@string/ime_switcher_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="bootani"
        android:title="@string/bootani_cat">

        <Preference
            android:key="custom_bootanimation"
            android:title="@string/custom_bootanimation_title"
            android:summary="@string/custom_bootanimation_summary" />

         <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

    </PreferenceCategory>

</PreferenceScreen>
