<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokp="http://schemas.android.com/apk/res/com.aokp.romcontrol">

    <PreferenceCategory android:title="@string/notification_cat">
    <PreferenceScreen
        android:key="notification_drawer"
        android:fragment="com.aokp.romcontrol.fragments.PowerWidget"
        android:title="@string/notification_drawer_title" />

    <PreferenceScreen
            android:id="@+id/slim_notification_shortcuts"
            android:fragment="com.aokp.romcontrol.fragments.NotificationShortcuts"
            android:key="slim_shortcuts_settings"
            android:title="@string/notification_shortcuts_settings_title"
            android:summary="@string/notification_shortcuts_settings_summary" />

    <CheckBoxPreference
        android:key="notification_show_wifi_ssid"
        android:title="@string/notification_show_wifi_ssid_title"
        android:summary="@string/notification_show_wifi_ssid_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/header_statusbar">

    <Preference
        android:key="enabled_toggles"
        android:summary="@string/enabled_toggles_summary"
        android:title="@string/enabled_toggles_title" />

    <Preference
        android:key="toggles"
        android:summary="@string/toggles_order_summary"
        android:title="@string/toggles_order_title" />

    <ListPreference
        android:entries="@array/toggles_per_row_entries"
        android:entryValues="@array/toggles_per_row_values"
        android:key="toggles_per_row"
        android:title="@string/toggles_per_row_title"
        android:summary="@string/toggles_per_row_summary" />

    <Preference
        android:key="toggle_fav_contact"
        android:summary="@string/toggle_favcontact_summary"
        android:title="@string/toggle_favcontact_title" />

    <ListPreference
        android:key="enable_fast_toggle"
        android:summary="@string/toggle_enable_fasttoggle_summary"
        android:title="@string/toggle_enable_fasttoggle_title"
        android:entries="@array/fast_toggle_entries"
        android:entryValues="@array/fast_toggle_values" />

    </PreferenceCategory>

</PreferenceScreen>
