<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="show_power_off"
        android:title="@string/title_show_power_off" />

    <CheckBoxPreference android:key="show_screenshot"
        android:title="@string/title_show_screenshot" />
<!--
    <CheckBoxPreference android:key="show_power_saver"
        android:title="@string/title_show_power_saver" />
-->
    <CheckBoxPreference android:key="show_torch_toggle"
        android:title="@string/title_show_torch_toggle" />

    <CheckBoxPreference android:key="show_airplane_toggle"
        android:title="@string/title_show_airplane_toggle" />

    <CheckBoxPreference android:key="show_navbar_hide"
        android:title="@string/title_show_navbar_hide" />

	<CheckBoxPreference android:key="power_menu_expanded_desktop"
        android:title="@string/power_menu_expanded_desktop" />

    <ListPreference
        android:key="expanded_desktop_style"
        android:title="@string/expanded_desktop_status_bar_state"
        android:entries="@array/expanded_desktop_entries"
        android:entryValues="@array/expanded_desktop_values"
        android:dependency="power_menu_expanded_desktop" />

    <CheckBoxPreference
        android:key="pie_restart_launcher"
        android:title="@string/pie_restart_launcher_title"
        android:summary="@string/pie_restart_launcher_summary" />

</PreferenceScreen>
