<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2010 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_one"
        android:title="@string/color_one"
        android:defaultValue="0xff0099cc"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_two"
        android:title="@string/color_two"
        android:defaultValue="0xff669900"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_three"
        android:title="@string/color_three"
        android:defaultValue="0xffcc0000"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_four"
        android:title="@string/color_four"
        android:defaultValue="0xffff8800"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_five"
        android:title="@string/color_five"
        android:defaultValue="0xffaa66cc"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_six"
        android:title="@string/color_six"
        android:defaultValue="0xff00ddff"
        alphaSlider="true" />

</PreferenceScreen>
