<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
         android:key="lockscreen_security"
         android:title="@string/lockscreen_security_cat" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.settings"
                android:targetClass="com.android.settings.SecuritySettings" />
    </Preference>

    <!-- Lock clock -->
    <Preference
        android:key="lock_clock"
        android:title="@string/lock_clock_title">
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.lockclock"
                android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
    </Preference>

    <PreferenceCategory
         android:key="shortcuts"
         android:title="@string/ls_shortcuts_title" />

    <Preference
        android:fragment="com.aokp.romcontrol.fragments.Lockscreens"
        android:title="@string/ls_shortcuts_title" />

</PreferenceScreen>
